# Quantum-systems

./: .figure_annotation_state.json  .gitignore  AGENTS.md  GUIDE.md  README.md  pyproject.toml  requirements.lock.txt  requirements.txt
configs/: transport_2d_target_position_campaign.json  transport_graph_collection_config.json  transport_graph_lab_config.json  transport_graph_lab_extended_nodes.json  transport_graph_lab_high_loss.json  transport_intense_campaign_plan.md  transport_lab_mcp_server.example.json  transport_learning_step1_walk.json  transport_learning_step2_sink.json  transport_learning_step3_dephasing.json  transport_material_full_campaign.json  transport_material_long_range_campaign.json  transport_medium_campaign_config.json  transport_phase_sweep_config.json  transport_research_rs_r1_boundaries.json  transport_research_rs_r2_target_position.json  transport_research_rs_r3_robustness.json  transport_research_rs_r4_materials.json  transport_ring_ceiling_campaign.json  transport_ring_focus_campaign.json  transport_ring_size_campaign.json  transport_ring_target_sweep_campaign.json  transport_strong_disorder_robustness_campaign.json  transport_targeted_studies_config.json
docs/: APPLICATION_PRIORITIES_2026-04-24.md  LAB_MANUAL.md  PROJECT_OVERVIEW.md  REPOSITORY_ORGANIZATION.md  TRANSPORT_RESEARCH_DATA_MAP.md  guia_inicial_transporte_quantico_ptbr.md  literature_map_dynamic_open_transport.md  local_physics_assistant.md  transport_graph_lab.md  transport_lab_mcp_server.md
examples/: experimental_tomography_manifest.template.json  nmr_default_config.json
(+733 files in other folders)
